Specifying Arrays to locate the password gen, including Lower Characters and fixing button response to display password.

--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
 
     <!-- Generate Button Password -->
     <div class="d-grid gap-2 col-6 mx-auto mt-4">
-        <button class="btn btn-primary" type="submit" id="generateBtn">Generate Password</button>
+        <button onclick="generatePassword()" class="btn btn-primary" type="submit" id="PasswordDisplay">Generate
+            Password</button>
     </div>
 
     <!-- Bootstrap Scripts -->
