Adding arrays, event listeners, limiting the amount, fixing button for display and placeholder to display the result.

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
     <!-- Generate Button Password -->
     <div class="d-grid gap-2 col-6 mx-auto mt-4">
-        <button onclick="generatePassword()" class="btn btn-primary" type="submit" id="PasswordDisplay">Generate
+        <button class="btn btn-primary" type="submit">Generate
             Password</button>
     </div>
 
