--- a/index.html
+++ b/index.html
@@ -11,13 +11,31 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 
 <body>
-    <!--  -->
-    <nav class="navbar bg-body-tertiary">
-        <div class="container-fluid d-flex justify-content-center">
-            <span class="navbar-brand mb-0 h1 mh-1">*Password Generator*</span>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Password Generator</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Home</a>
+                </li>
+                <!-- About Me Info  -->
+                <li class="nav-item">
+                    <a class="nav-link" href="#">About</a>
+                </li>
+                <!-- My Contact -->
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Contact</a>
+                </li>
+            </ul>
         </div>
     </nav>
 
@@ -27,60 +45,76 @@
     <br>
 
     <!-- Password Holder Area -->
-    <div class="d-grid gap-2 col-6 mx-auto">
-        <textarea readonly id="password" placeholder="Your Secure Password" aria-label="Generated Password"></textarea>
+    <div class="d-grid gap-2 text-center col-6 mx-auto">
+        <label for="generatedPassword">Password Generated:</label>
+        <textarea id="passwordOutput" placeholder="Your Secure Password" class="form-control text-center"></textarea>
     </div>
-    <div class="include-box" id="passwordGeneratorForm">
-        <div class="container text-center mt-4 ml-3">
-            <!-- LowerCase Section -->
+    <div id="passwordGeneratorForm">
+        <div class="container text-center mt-4">
             <div class="row align-items-center">
-                <div class="col">
-                    <label for="includeLowerCase">LowerCase</label>
+
+                <!-- Password Lenght -->
+                <div class="form-group">
+                    <label for="passwordLength">Length desired:</label>
+                    <input type="number" class="text-center form-control" id="passwordLength" value="8">
                 </div>
-                <div class="col">
-                    <input class="ml-3" type="checkbox" id="includeLowerCase">
+                <!-- LowerCase Section -->
+                <div class="row align-items-center">
+                    <div class="col">
+                        <label for="includeLowerCase">LowerCase</label>
+                    </div>
+                    <div class="col">
+                        <input class="ml-1" type="checkbox" id="includeLowerCase" checked>
+                    </div>
                 </div>
-            </div>
-            <!-- UpperCase Section -->
-            <div class="row align-items-center">
-                <div class="col">
-                    <label for="includeUpperCase">UpperCase</label>
+                <!-- UpperCase Section -->
+                <div class="row align-items-center">
+                    <div class="col">
+                        <label for="includeUpperCase">UpperCase</label>
+                    </div>
+                    <div class="col">
+                        <input class="ml-1" type="checkbox" id="includeUpperCase" checked>
+                    </div>
                 </div>
-                <div class="col">
-                    <input class="ml-3" type="checkbox" id="includeUpperCase">
+                <!-- Numbers Section -->
+                <div class="row align-items-center">
+                    <div class="col">
+                        <label for="iuncludeNumbers">Numbers</label>
+                    </div>
+                    <div class="col">
+                        <input class="ml-1" type="checkbox" id="includeNumbers" checked>
+                    </div>
                 </div>
-            </div>
-            <!-- Numbers Section -->
-            <div class="row align-items-center">
-                <div class="col">
-                    <label for="iuncludeNumbers">Numbers</label>
-                </div>
-                <div class="col">
-                    <input class="ml-3" type="checkbox" id="includeNumbers">
-                </div>
-            </div>
-            <!-- Special Characters Section -->
-            <div class="row align-items-center">
-                <div class="col">
-                    <label for="includeSpecialCharacters">Special Characters</label>
-                </div>
-                <div class="col">
-                    <input class="ml-3" type="checkbox" id="includeSpecialCharacters">
+                <!-- Special Characters Section -->
+                <div class="row align-items-center">
+                    <div class="col">
+                        <label for="includeSpecialCharacters">Special Characters</label>
+                    </div>
+                    <div class="col">
+                        <input class="ml-1" type="checkbox" id="includeSpecialCharacters" checked>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 
-    <!-- Generate Button Password -->
-    <div class="d-grid gap-2 col-6 mx-auto mt-4">
-        <button id="generate" class="btn btn-primary">Generate Password</button>
-    </div>
+        <!-- Generate | Clean | Save | Saved Passwords Buttons -->
+        <div class="d-grid gap-2 col-6 mx-auto mt-4">
+            <button id="generateBtn" class="btn btn-primary">Generate Password</button>
+            <button type="button" class="btn btn-secondary" id="clearPasswordBtn">Clean</button>
+            <button type="button" class="btn btn-success" id="savePasswordBtn">Save</button>
+            <button type="button" class="btn btn-info" id="viewPasswordsBtn">Saved passwords</button>
+        </div>
 
-    <!-- Bootstrap Scripts -->
-    <script src="main.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-        crossorigin="anonymous"></script>
+        <!-- Bootstrap Scripts -->
+        <script src="main.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+            crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"
+            integrity="sha256-lMhFq3CEqWyElH5j1Sd0tfx5Ct7o4H4Z4quK/Nx1bUE=" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
 
 </body>
 
