--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
         <!-- Generate | Clean | Save | Saved Passwords Buttons -->
         <div class="d-grid gap-2 col-6 mx-auto mt-4">
             <button id="generateBtn" class="btn btn-primary">Generate Password</button>
-            <button type="button" class="btn btn-secondary" id="clearPasswordBtn">Clean</button>
-            <button type="button" class="btn btn-success" id="savePasswordBtn">Save</button>
+            <button type="button" class="btn btn-secondary" id="clearBtn">Clean</button>
+            <button type="button" class="btn btn-success" id="saveBtn">Save</button>
             <button type="button" class="btn btn-info" id="viewPasswordsBtn">Saved passwords</button>
         </div>
 
