--- a/index.html
+++ b/index.html
@@ -55,43 +55,44 @@
 
                 <!-- Password Lenght -->
                 <div class="form-group">
-                    <label for="passwordLength">Length desired:</label>
-                    <input type="number" class="text-center form-control" id="passwordLength" value="8">
+                    <label for="passwordLengthInput">Password Length:</label>
+                    <input type="number" class="text-center form-control" id="passwordLengthInput" min="8" max="24"
+                        value="8">
                 </div>
                 <!-- LowerCase Section -->
                 <div class="row align-items-center">
                     <div class="col">
-                        <label for="includeLowerCase">LowerCase</label>
+                        <label for="lowercaseCheckbox">Include lowercase</label>
                     </div>
                     <div class="col">
-                        <input class="ml-1" type="checkbox" id="includeLowerCase" checked>
+                        <input type="checkbox" id="lowercaseCheckbox" name="lowercase" checked>
                     </div>
                 </div>
                 <!-- UpperCase Section -->
                 <div class="row align-items-center">
                     <div class="col">
-                        <label for="includeUpperCase">UpperCase</label>
+                        <label for="uppercaseCheckbox">Include uppercase</label>
                     </div>
                     <div class="col">
-                        <input class="ml-1" type="checkbox" id="includeUpperCase" checked>
+                        <input type="checkbox" id="uppercaseCheckbox" name="uppercase" checked>
                     </div>
                 </div>
                 <!-- Numbers Section -->
                 <div class="row align-items-center">
                     <div class="col">
-                        <label for="iuncludeNumbers">Numbers</label>
+                        <label for="numbersCheckbox">Include numbers</label>
                     </div>
                     <div class="col">
-                        <input class="ml-1" type="checkbox" id="includeNumbers" checked>
+                        <input type="checkbox" id="numbersCheckbox" name="numbers" checked>
                     </div>
                 </div>
                 <!-- Special Characters Section -->
                 <div class="row align-items-center">
                     <div class="col">
-                        <label for="includeSpecialCharacters">Special Characters</label>
+                        <label for="specialCharactersCheckbox">Include special characters</label>
                     </div>
                     <div class="col">
-                        <input class="ml-1" type="checkbox" id="includeSpecialCharacters" checked>
+                        <input type="checkbox" id="specialCharactersCheckbox" name="specialCharacters" checked>
                     </div>
                 </div>
             </div>
@@ -111,10 +112,7 @@
             integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
             crossorigin="anonymous"></script>
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"
-            integrity="sha256-lMhFq3CEqWyElH5j1Sd0tfx5Ct7o4H4Z4quK/Nx1bUE=" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
 
 </body>
 
