adding and fixing the local storage function, the button now response with a modal that show the passwords generated on an external modal that hide after closing it.

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                     <textarea id="savedPasswordsTextarea" rows="10"></textarea>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                 </div>
             </div>
         </div>
