Adding a button to clear the local storage inside the modal to clean the memory, the JSON was implemented to synch timing when the password was getting generated on real time. Fix the cleaning bug that was not clearing the complete information

--- a/index.html
+++ b/index.html
@@ -137,14 +137,19 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <textarea id="savedPasswordsTextarea" rows="10"></textarea>
+                    <textarea id="savedPasswordsTextarea" style="width: 100%;" rows="10"
+                        class="saved-passwords-textarea"></textarea>
                 </div>
                 <div class="modal-footer">
+                    <button type="button" class="btn btn-danger" id="clearLocalStorageBtn">Clear Saved
+                        Passwords</button>
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                 </div>
             </div>
         </div>
     </div>
+
+
 
     <!-- Bootstrap Scripts -->
     <script src="main.js"></script>
